k8s/testserver-route-passthrough.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: passthrough
  namespace: testserver
spec:
  host: passthrough-testserver.apps.acm.xphyrlab.net
  port:
    targetPort: 8443
  tls:
    termination: passthrough
  to:
    kind: Service
    name: testserver
    weight: 100
  wildcardPolicy: None
