k8s/testserver-route-reencrypt.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: reencrypt
  namespace: testserver
spec:
  host: reencrypt-testserver.apps.acm.xphyrlab.net
  port:
    targetPort: 8443
  tls:
    destinationCACertificate: |
      -----BEGIN CERTIFICATE-----
      MIIFCTCCAvGgAwIBAgIUPMc4R60VcjfQkb4Dh3fHpgZK+BowDQYJKoZIhvcNAQEL
...
      yOjEgK3DoKAdNQq+pMyHZxci3rMNSYgPD1YDJnmW/jwueZ3YE/PVXw6ROxlB2ZN0
[...]
      -----END CERTIFICATE-----
    termination: reencrypt
  to:
    kind: Service
    name: testserver
    weight: 100
  wildcardPolicy: None
